force-app/main/default/objects/FieloEE__Menu__c/FieloEE__Menu__c.object-meta.xml
<CustomObject>
    <description>The members’ portal&#39;s pages. It is equivalent to the site map.</description>
    <label>Menu</label>
    <nameField>
        <label>Menu Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>