force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__CSS__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CSS__c</fullName>
    <description>CSS code to modify the look and formatting of this menu.</description>
    <inlineHelpText>Enter a CSS code for this menu.</inlineHelpText>
    <label>CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>