force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Desktop__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Desktop__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make this menu show in a desktop computer.</description>
    <inlineHelpText>Check this option for making this menu visible on a desktop computer.</inlineHelpText>
    <label>Desktop</label>
    <type>Checkbox</type>
</CustomField>