force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__HasMultiSegments__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__HasMultiSegments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Multi Segments</label>
    <type>Checkbox</type>
</CustomField>