force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__ImagePosition__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ImagePosition__c</fullName>
    <label>Image Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Only Image</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
            <value>
                <fullName>Only Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>