force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Layout__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Layout__c</fullName>
    <description>This field will be populated by the trigger and it will contain the CSS classes depending on the visibility of the Menu by device.</description>
    <label>Display Device</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Column</fullName>
                <default>true</default>
                <label>One Column</label>
            </value>
            <value>
                <fullName>Two Columns</fullName>
            </value>
            <value>
                <fullName>Banner + Two Columns</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>