force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Link__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Link__c</fullName>
    <description>Field to indicate if the menu has components</description>
    <label>Has components</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>