force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Menu__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the father menu</description>
    <label>Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Sub Menus</relationshipLabel>
    <relationshipName>Menu</relationshipName>
    <type>Lookup</type>
</CustomField>