force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <description>The order in which this menu will show in the members&#39; portal.</description>
    <inlineHelpText>Select the order in which this menu will be showed in the members&#39; portal.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>