force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Placement__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Placement__c</fullName>
    <description>The placement of this menu. It can be Top, Main or Footer.</description>
    <inlineHelpText>Pick the placement for this menu.</inlineHelpText>
    <label>Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>