force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__SEOTitle__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__SEOTitle__c</fullName>
    <label>SEO Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>