force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Tablet__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Tablet__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make this menu show in a tablet computer.</description>
    <inlineHelpText>Check this option for making this menu visible on a tablet computer.</inlineHelpText>
    <label>Tablet</label>
    <type>Checkbox</type>
</CustomField>