force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__Title__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Title__c</fullName>
    <description>A title that will show on top of the page.</description>
    <inlineHelpText>Enter a title that will show on top of the page.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>