force-app/main/default/objects/FieloEE__Menu__c/fields/FieloEE__visibility__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__visibility__c</fullName>
    <description>Who will be able to see this menu: nobody, everybody or only logged in users.</description>
    <inlineHelpText>Define who will see the menu.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
                <default>true</default>
                <label>Hidden</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>