force-app/main/default/objects/FieloEE__Menu__c/recordTypes/FieloEE__SubMenu.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__SubMenu</fullName>
    <active>true</active>
    <label>Sub Menu</label>
</RecordType>